--- a/style.css
+++ b/style.css
@@ -11,12 +11,50 @@
     cursor:pointer;
     text-transform:uppercase;
  }
-.shadow:hover{
-    -web-kit-animation:shadow 0.3 both;
-             animation:shadow 0.3 both;
+ .shadow-tl:hover{
+   animation:shadow-tl 0.3 both;
+}
+@keyframes shadow-tl{
+   0%{
+      box-shadow: 0 0 #000000, 0 0 #000000 ;
+      transform:translateX(0) translateY(0);
+   }
+   100%{
+      box-shadow:-1px -1px #000000, -2px -2px #000000,-3px -3px,-4px -4px #000000, -5px -5px #000000,-6px -6px #000000,-7px -7px #000000;
+      transform:translateX(8px) translateY(8px);
+   } 
+}
+.shadow-tr:hover{
+   animation:shadow-tr 0.3 both;
+}
+@keyframes shadow-tr{
+   0%{
+      box-shadow: 0 0 #000000, 0 0 #000000;
+      transform: translateX(0) translateY(0);
+   }
+   100%{
+      box-shadow: 1px -1px #000000, 2px -2px #000000, 3px -3px #000000, 4px -4px #000000, 5px -5px #000000,6px -6px #000000,7px -7px #000000;
+              transform: translateX(-8px) translateY(8px);
+   }
+}
+.shadow-bl:hover{
+   animation:shadow-bl 0.3 both;
+}
+@keyframes shadow-bl{
+   0%{
+      box-shadow: 0 0 #000000, 0 0 #000000;
+      transform: translateX(0) translateY(0);
+   }
+   100%{
+       box-shadow: -1px 1px #000000, -2px 2px #000000, -3px 3px #000000, -4px 4px #000000, -5px 5px #000000,-6px 6px #000000,-7px 7px #000000;
+              transform: translateX(8px) translateY(8px);
+   }
+}
+.shadow-br:hover{
+             animation:shadow-br 0.3 both;
 }
 
- @keyframes shadow {
+ @keyframes shadow-br {
     0% { 
               box-shadow: 0 0 #000000, 0 0 #000000;
               transform: translateX(0) translateY(0);
@@ -26,6 +64,17 @@
               transform: translateX(-8px) translateY(-8px);
     }
   }
+  .shadow:hover{
+   animation:shadow-br 0.3 both;
+}
 
-  
-
+@keyframes shadow {
+0% { 
+    box-shadow: 0 0 #000000, 0 0 #000000;
+    transform: translateX(0) translateY(0);
+}
+100% {
+    box-shadow: 1px 1px #000000, 2px 2px #000000, 3px 3px #000000, 4px 4px #000000, 5px 5px #000000,6px 6px #000000,7px 7px #000000;
+    transform: translateX(8px) translateY(8px);
+   }
+}
