--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
   }
- 
+  body{
+   background-color:#FCE1DA;
+  }
  .btn{
     border:2px solid;
     padding:1em 2em;
@@ -11,16 +13,22 @@
     cursor:pointer;
     text-transform:uppercase;
  }
+ .shadow-tl{
+   background:#E83F40;
+   color:#E9EFF2;
+   border:2px solid #F05F64;
+   border-radius:5px;
+ }
  .shadow-tl:hover{
    animation:shadow-tl 0.3 both;
 }
 @keyframes shadow-tl{
    0%{
-      box-shadow: 0 0 #000000, 0 0 #000000 ;
+      box-shadow: 0 0 #EB6E71, 0 0 #EB6E71;
       transform:translateX(0) translateY(0);
    }
    100%{
-      box-shadow:-1px -1px #000000, -2px -2px #000000,-3px -3px,-4px -4px #000000, -5px -5px #000000,-6px -6px #000000,-7px -7px #000000;
+      box-shadow:-1px -1px #EB6E71, -2px -2px #EB6E71,-3px -3px #EB6E71,-4px -4px #EB6E71, -5px -5px #EB6E71,-6px -6px #EB6E71,-7px -7px #EB6E71;
       transform:translateX(8px) translateY(8px);
    } 
 }
@@ -65,7 +73,7 @@
     }
   }
   .shadow:hover{
-   animation:shadow-br 0.3 both;
+   animation:shadow 0.3 both;
 }
 
 @keyframes shadow {
@@ -74,7 +82,7 @@
     transform: translateX(0) translateY(0);
 }
 100% {
-    box-shadow: 1px 1px #000000, 2px 2px #000000, 3px 3px #000000, 4px 4px #000000, 5px 5px #000000,6px 6px #000000,7px 7px #000000;
+    box-shadow: -1px -2px #000000, 2px -3px #000000, 3px -4px #000000, 4px -5px #000000, 5px -6px #000000,6px -7px #000000,7px -8px #000000,8px 9px #000000;
     transform: translateX(8px) translateY(8px);
    }
 }
