--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-
+body{
+   background-color:#e9e8e8c4;
+   font-family:Montserrat;
+}
  .btn{
     border:2px solid;
     padding:1em 2em;
@@ -15,6 +20,7 @@
    border:2px solid #000000;
    border-radius:5px;
    background-color:#BFB9FC;
+   color:#FFFFFF;
  }
  .shadow-tl:hover{
    animation:shadow-tl 0.3 both;
@@ -45,7 +51,7 @@
 .shadow-bl,.shadow-br{
    background-color:#EB6E71;
    color:#E9EFF2;
-   border:2px solid #F05F64;
+   border:2px solid #000000;
    border-radius:5px;
 }
 .shadow-bl:hover{
@@ -53,11 +59,11 @@
 }
 @keyframes shadow-bl{
    0%{
-      box-shadow: 0 0 #E83F40, 0 0 #E83F40;
+      box-shadow: 0 0 #000000, 0 0 #000000;
       transform: translateX(0) translateY(0);
    }
    100%{
-       box-shadow: -1px 1px #E83F40, -2px 2px #E83F40, -3px 3px #E83F40, -4px 4px #E83F40, -5px 5px #E83F40,-6px 6px #E83F40,-7px 7px #E83F40;
+       box-shadow: -1px 1px #000000, -2px 2px #000000, -3px 3px #000000, -4px 4px #000000, -5px 5px #000000,-6px 6px #000000,-7px 7px #000000;
               transform: translateX(8px) translateY(8px);
    }
 }
@@ -67,13 +73,19 @@
 
  @keyframes shadow-br {
     0% { 
-              box-shadow: 0 0 #E83F40, 0 0 #E83F40;
+              box-shadow: 0 0 #000000, 0 0 #000000;
               transform: translateX(0) translateY(0);
     }
     100% {
-              box-shadow: 1px 1px #E83F40, 2px 2px #E83F40, 3px 3px #E83F40, 4px 4px #E83F40, 5px 5px #E83F40,6px 6px #E83F40,7px 7px #E83F40;
+              box-shadow: 1px 1px #000000, 2px 2px #000000, 3px 3px #000000, 4px 4px #000000, 5px 5px #000000,6px 6px #000000,7px 7px #000000;
               transform: translateX(-8px) translateY(-8px);
     }
+  }
+  .shadow,.shadow-b{
+   background-color:#5D7BE6;
+   color:#E9EFF2;
+   border:2px solid #000000;
+   border-radius:5px;
   }
   .shadow:hover{
    animation:shadow 0.3 both;
@@ -89,3 +101,16 @@
     transform: translateX(8px) translateY(8px);
    }
 }
+.shadow-b:hover{
+   animation:shadow-b 0.3 both;
+}
+@keyframes shadow-b {
+   0% { 
+       box-shadow: 0 0 #000000, 0 0 #000000;
+       transform: translateX(0) translateY(0);
+   }
+   100% {
+       box-shadow: -1px -2px #000000, -2px -3px #000000, -3px -4px #000000, -4px -5px #000000, -5px -6px #000000,-6px -7px #000000,-7px -8px #000000,-8px 9px #000000;
+       transform: translateX(8px) translateY(8px);
+      }
+   }
